1st section some modification

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 .main .box{
     height: 70vh;
     width: 100%;
-    opacity: 0.44;
+    opacity: 0.69;
     position: absolute;
     top: 0;
     background-color: black;
@@ -46,7 +46,7 @@ nav button{
 }
 .hero{
     font-family: 'Martel Sans', sans-serif;
-    height: 100%;
+    height: calc(100% - 100px);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -54,7 +54,7 @@ nav button{
     color: white;
     position: relative;
     gap: 23px;
-    padding: 30px;
+    padding: 0 30px;
 }
 
 .hero> :nth-child(1){
@@ -73,4 +73,43 @@ nav button{
     font-weight: 400;
     font-size: 20px;
     text-align: center;
+}
+
+.sepration{
+    height: 7px;
+    background-color: rgb(46, 44, 44);
+}
+
+.btn{
+    padding: 3px 8px;
+    font-weight: bold;
+    background-color: white;
+}
+
+.btn-red{
+    background-color: red;
+    color: white;
+    padding: 3px 24px;
+    font-size: 20px;
+    border-radius: 4px;
+}
+
+.hero-buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+}
+
+.main input{
+    padding: 7px 101px 8px 14px;
+    font-size: 12px;
+    border-radius: 4px;
+    background-color: rgba(23,23,23,0.7);
+    border: 1px solid rgba(246,238,238,0.5);
+}
+
+.btn-red-sm{
+    background-color: red;
+    color: white;
 }
